--- a/src/app/teams/create-team/create-team.component.html
+++ b/src/app/teams/create-team/create-team.component.html
@@ -1,4 +1,18 @@
 <img class="img-fluid float-right"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
+
+
+
+
+  <div class="right_col" role="main">
+      <div class="">
+        <div class="page-title">
+          <div class="title_left">
+            <h3>Create A New User</h3>
+          </div>
+
+
+        </div>
+        <div class="clearfix"></div>
 <div class="row" id="ChoosePackage">
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="x_panel">
@@ -47,3 +61,6 @@
       </div>
     </div>
   </div>
+
+    </div>
+    </div>
