fixing create organisation

--- a/src/app/Layouts/master-layout/master-layout.component.html
+++ b/src/app/Layouts/master-layout/master-layout.component.html
@@ -64,6 +64,8 @@
 
                       <li><a  routerLink="/master/team/create" ><i class="fa fa-users"></i>Create Team</a></li>
                       <li><a  routerLink="/master/team-member/create" ><i class="fa fa-plus"></i>Add user to team</a></li>
+                     
+                      <li><a  routerLink="/master/project/create" ><i class="fa fa-plus"></i>Create Project</a></li>
 
                       <li><a  routerLink="/master/customer/create" ><i class="fa fa-file"></i>Create Basket</a></li>
                   <li><a href="#"><i class="fa fa-archive"></i>Assign</a>
