--- a/src/app/organisations/create-organisation/create-organisation.component.html
+++ b/src/app/organisations/create-organisation/create-organisation.component.html
@@ -1,5 +1,8 @@
 <img class="img-fluid float-right"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
-<div class="row" id="ChoosePackage">
+
+<div class="right_col" role="main" style="min-height: 799px;">
+
+  <div class="row" id="ChoosePackage">
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="x_panel">
         <div class="x_title">
@@ -211,3 +214,6 @@
 
 
 
+
+
+</div>
