--- a/src/app/project/create-project/create-project.component.html
+++ b/src/app/project/create-project/create-project.component.html
@@ -1,4 +1,5 @@
 <img class="img-fluid float-right"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
+<div class="right_col" role="main" style="min-height: 799px;">
 <div class="row" id="ChoosePackage">
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="x_panel">
@@ -39,3 +40,6 @@
       </div>
     </div>
   </div>
+</div>
+
+
