--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -74,7 +74,7 @@
                 </div>
               </div>
               <div class="item form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="PhoneNumber">Phone Number<span class="required"></span>
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="PhoneNumber">Phone Number(Include Country Code eg +23480900000) <span class="required"></span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <input class="form-control col-md-7 col-xs-12" [formControl] ="phoneNumber" placeholder="PhoneNumber" required="required" type="number">
