--- a/src/app/Layouts/supervisor/supervisor.component.html
+++ b/src/app/Layouts/supervisor/supervisor.component.html
@@ -33,16 +33,17 @@
                   <ul class="nav side-menu">
                     <li><a routerLink='/supervisior' ><i class="fa fa-home"></i>Home</a> </li>
                     <li><a [routerLink]="['/supervisior/project/', orgainisationId]" ><i class="fa fa-file"></i>Portfolio</a> </li>
+                    <li><a [routerLink]="['/supervisior/project/create', orgainisationId]" ><i class="fa fa-file"></i>Create Project</a> </li>
 
                     <li> <a [routerLink]="['/supervisior/reminders/', orgainisationId]"><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">{{remiderCount}}</span></a> </li>
                     <li> <a [routerLink]="['/supervisior/payments/', orgainisationId]"><i class="fa fa-usd"></i>Due Payment <span class="badge bg-orange">{{duePaymentCount}}</span></a>  </li>
                     <li> <a [routerLink]="['/supervisior/Reschedule/', orgainisationId]"><i class="fa fa-recycle"></i>Reschedule <span class="badge bg-orange">{{rescheduleCount}}</span></a>  </li>
-                    <li> <a [routerLink]="['/supervisior/query/', orgainisationId]"><i class="fa fa-recycle"></i>Query <span class="badge bg-orange">{{rescheduleCount}}</span></a>  </li>
-
-                    <li> <a [routerLink]="['/supervisior/updates/', orgainisationId]" ><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange"></span></a>  </li>
+                    <li> <a [routerLink]="['/supervisior/query/', orgainisationId]"><i class="fa fa-recycle"></i>Query <span class="badge bg-orange">{{queryCount}}</span></a>  </li>
+                    <li> <a [routerLink]="['/supervisior/updates/', orgainisationId]" ><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange">{{UpdateCount}}</span></a>  </li>
                     <li><a [routerLink]="['/supervisior/team/list/', orgainisationId]"><i class="fa fa-users"></i>Team<span class="badge bg-red"></span></a> </li>
-                    <li><a routerLink="/supervisior/customer/create"><i class="fa fa-plus-circle"></i>Create Basket <span class="badge bg-red"></span></a> </li>
+                    <li><a [routerLink]="['/supervisior/customer/create/', orgainisationId]"><i class="fa fa-plus-circle"></i>Create Basket <span class="badge bg-red"></span></a> </li>
                     <li><a routerLink="/supervisior/AssignBasket"><i class="fa fa-train"></i>Assign Basket <span class="badge bg-red"></span></a> </li>
+
                     <li> <a href="#" (click)="logout()"><i class="fa fa-signout"></i>Logout </a>  </li>
 
                   </ul>
