--- a/src/app/components/master/master.component.html
+++ b/src/app/components/master/master.component.html
@@ -3,8 +3,7 @@
   <div class="row tile_count">
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Total Accounts</span>
-      <div class="count">2500</div>
-      <span class="count_bottom"><i class="green">4% </i> From last Week</span>
+      <div class="count">{{totalOrg}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-tasks"></i> Total Calls & Visits</span>
@@ -13,23 +12,20 @@
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-recycle"></i> Total Rescedule</span>
-      <div class="count green">2500</div>
-      <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
+      <div class="count green">{{totalReschedule}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-reply"></i> Total Reminder</span>
-      <div class="count">4567</div>
-      <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
+      <div class="count">{{totalRemiders}}</div>
     </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+    <!-- <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-usd"></i> Total Collections</span>
       <div class="count">2,315</div>
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-    </div>
+    </div> -->
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-exclamation"></i> Total Queries</span>
-      <div class="count">7,325</div>
-      <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
+      <div class="count">{{totalQueries}}</div>
     </div>
   </div>
   <!-- /top tiles -->
